--- a/default.hbs
+++ b/default.hbs
@@ -40,13 +40,14 @@
         <rect/>
       </svg>
     </span>
-  {{/if}}
 
-  {{navigation}}
+    {{navigation}}
+
+  {{/if}}
 
   {{! Main navigation menu }}
   <nav class="main-nav">
-    <h1 class="page-title"><a href="{{@blog.url}}">{{#if @blog.title}}{{@blog.title}}{{else}}Blog name!{{/if}}</a></h1>
+    <h1 class="page-title"><a href="{{@blog.url}}">{{#if @blog.title}}{{@blog.title}}{{else}}Constructivism!{{/if}}</a></h1>
   </nav>
 
   <div class="site-wrapper">
