--- a/assets/sass/partials/_index.scss
+++ b/assets/sass/partials/_index.scss
@@ -12,6 +12,7 @@
 @import 'base/buttons';
 @import 'base/footer';
 @import 'base/hero-section';
+@import 'base/menu-box';
 @import 'base/menu-icon';
 @import 'base/menu';
 @import 'base/navigation';
