--- a/assets/sass/sections/author/_index.scss
+++ b/assets/sass/sections/author/_index.scss
@@ -6,6 +6,8 @@
 // General
 // -----------------------------------------------------------------------------
 .about-content {
+  padding-top: $distance * 3;
+  position: relative;
   text-align: center;
 
   > .post {
@@ -14,12 +16,20 @@
     text-align: left;
     width: 66.66%;
   }
-}
 
+  .menu-box {
+    position: absolute;
+    right: 0;
+    top: $distance * 5;
+  }
+}
+// -----------------------------------------------------------------------------
+
+
+// Author Profile
+// -----------------------------------------------------------------------------
 .author-profile {
   position: relative;
-
-
 // Author Image
 // -----------------------------------------------------------------------------
   .author-image {
@@ -102,7 +112,7 @@
         color: $white;
         font-size: $fsmall;
         line-height: $line-height-big * 2;
-        
+
         &:hover {
           border-bottom: 1px dotted $white;
         }
@@ -114,6 +124,5 @@
       }
     }
   }
-// -----------------------------------------------------------------------------
 }
 // -----------------------------------------------------------------------------
