--- a/page-about.hbs
+++ b/page-about.hbs
@@ -35,7 +35,7 @@
 <main class="about-content" role="main">
 
   {{#if @blog.navigation}}
-    <menu class="menu-box-widget">
+    <menu class="menu-box right">
       {{navigation}}
     </menu>
   {{/if}}
