--- a/tag-thoughts.hbs
+++ b/tag-thoughts.hbs
@@ -1,16 +1,20 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
-<nav class="main-nav">
-  <h1 class="page-title"><a href="{{@blog.url}}">{{#if @blog.title}}{{@blog.title}}{{else}}Blog name!{{/if}}</a></h1>
-  <span>· {{tag.name}}</span>
-</nav>
 
 {{! If we have a tag cover, display that - else blog cover - else nothing }}
-<header class="tag-head {{#if tag.image}}" style="background-image: url({{tag.image}}){{else}}no-cover{{/if}}">
+<header class="tag-head {{#if tag.image}}" style="background-image: url({{tag.image}}){{else}}no-cover{{/if}}"></header>
+
+<aside class="tag-aside">
   {{#if tag.description}}
-    <h3 class="page-description">{{tag.description}}</h3>
+    <p class="page-description">{{tag.description}}</p>
   {{/if}}
-</header>
+
+  {{#if @blog.navigation}}
+    <menu class="menu-box left">
+      {{navigation}}
+    </menu>
+  {{/if}}
+</aside>
 
 {{! The main content area on the homepage }}
 <main class="tag-content" role="main">
