--- a/assets/sass/partials/base/_footer.scss
+++ b/assets/sass/partials/base/_footer.scss
@@ -13,6 +13,10 @@
   position: relative;
   width: 100%;
 
+  a:hover {
+    color: $white;
+  }
+
 
 // Copyright
 // -----------------------------------------------------------------------------
