--- a/assets/sass/partials/base/_general.scss
+++ b/assets/sass/partials/base/_general.scss
@@ -53,6 +53,7 @@ body {
   max-width: $site-box;
   min-height: $site-height;
   overflow-x: hidden;
+  overflow-y: auto;
   padding-top: $distance * 3;
   position: relative;
   width: 100%;
