Added portfolio base heading.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -18,6 +18,7 @@
 // Import Sections
 // -----------------------------------------------------------------------------
 @import 'sections/author/index';
+@import 'sections/case/index';
 @import 'sections/contact/index';
 @import 'sections/home/index';
 @import 'sections/post/index';
