--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ body {
   position: relative;
   width: 100%; }
 
-.post-template:not(.page-template) .author .author-image {
+.post-template.tag-portfolio:not(.page-template) .author .author-image, .post-template:not(.page-template) .author .author-image {
   border-radius: 50%;
   font-size: 0;
   height: 46px;
@@ -100,11 +100,11 @@ body {
   .post-template:not(.page-template) .author .author-image + .author-name {
     margin-left: 10px; }
 
-.post-template:not(.page-template) .author .author-name {
+.post-template.tag-portfolio:not(.page-template) .author .author-name, .post-template:not(.page-template) .author .author-name {
   font-size: 0.85rem;
   font-weight: 500;
   line-height: 23px; }
-  .post-template:not(.page-template) .author .author-name > span {
+  .post-template.tag-portfolio:not(.page-template) .author .author-name > span, .post-template:not(.page-template) .author .author-name > span {
     display: block;
     font-size: 0.7rem;
     font-weight: 300; }
@@ -573,7 +573,7 @@ pre[class*='language-'] {
     .related-posts > a:last-of-type::after {
       content: ''; }
 
-.post-template:not(.page-template) .share > a[class*='icon-'] {
+.post-template.tag-portfolio:not(.page-template) .share > a[class*='icon-'], .post-template:not(.page-template) .share > a[class*='icon-'] {
   display: inline-block;
   margin-right: -5px;
   vertical-align: top;
@@ -644,7 +644,7 @@ a[class='twitter'] {
 a[class='dribbble'] {
   background-image: url("../img/icon-dribbble.svg"); }
 
-.about-content > .post, .post-template:not(.page-template) article, article.thought {
+.about-content > .post, .post-template.tag-portfolio:not(.page-template) article, .post-template:not(.page-template) article, article.thought {
   max-width: 850px;
   padding: 30px 0;
   width: 100%; }
@@ -846,6 +846,116 @@ h6 {
           content: '»';
           margin-left: 10px; }
 
+.post-template.tag-portfolio:not(.page-template) .post-heading {
+  max-width: 1280px;
+  padding-top: 30px; }
+
+.post-template.tag-portfolio:not(.page-template) .main-date {
+  display: inline-block;
+  margin-right: -5px;
+  vertical-align: top;
+  font-size: 3.75rem;
+  font-weight: 700;
+  height: 50vh;
+  line-height: 1em;
+  min-height: 500px;
+  position: relative;
+  width: 33.33%; }
+  .post-template.tag-portfolio:not(.page-template) .main-date::before {
+    border-bottom: 10px solid #f03246;
+    border-right: 10px solid #f03246;
+    content: '';
+    height: calc(100% - 40px);
+    left: 0;
+    position: absolute;
+    top: 30px;
+    width: calc(100% - 50px); }
+  .post-template.tag-portfolio:not(.page-template) .main-date::after {
+    background-color: #223347;
+    content: '';
+    bottom: calc(3.75rem + 30px);
+    height: 1px;
+    position: absolute;
+    right: 60px;
+    transform: rotate(-45deg);
+    width: 180px; }
+  .post-template.tag-portfolio:not(.page-template) .main-date .mm,
+  .post-template.tag-portfolio:not(.page-template) .main-date .yy {
+    display: block;
+    position: absolute; }
+  .post-template.tag-portfolio:not(.page-template) .main-date .mm {
+    bottom: calc(3.75rem + 40px);
+    right: 160px; }
+  .post-template.tag-portfolio:not(.page-template) .main-date .yy {
+    bottom: 20px;
+    right: 80px; }
+
+.post-template.tag-portfolio:not(.page-template) .main-header {
+  display: inline-block;
+  margin-right: -5px;
+  vertical-align: top;
+  animation: blured-out .999s ease-out forwards;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
+  min-height: 500px;
+  width: 66.66%; }
+
+.post-template.tag-portfolio:not(.page-template) .site-wrapper {
+  margin: 0;
+  max-width: 100vw;
+  min-height: calc(100vh - 40px);
+  padding: 0; }
+
+.post-template.tag-portfolio:not(.page-template) .content {
+  animation: op-in .999s ease-out forwards;
+  max-width: 1280px;
+  padding-bottom: 50px; }
+
+.post-template.tag-portfolio:not(.page-template) article {
+  margin-left: 0; }
+  .post-template.tag-portfolio:not(.page-template) article .post-header {
+    text-align: left; }
+
+.post-template.tag-portfolio:not(.page-template) .post-content + .post-footer {
+  margin-top: 30px; }
+
+.post-template.tag-portfolio:not(.page-template) .author,
+.post-template.tag-portfolio:not(.page-template) .share {
+  display: inline-block;
+  margin-right: -5px;
+  vertical-align: top;
+  margin-top: 30px;
+  width: 50%; }
+
+.post-template.tag-portfolio:not(.page-template) .author .author-image {
+  display: inline-block;
+  margin-right: -5px;
+  vertical-align: top; }
+
+.post-template.tag-portfolio:not(.page-template) .author .author-name {
+  display: inline-block;
+  margin-right: -5px;
+  vertical-align: top; }
+
+.post-template.tag-portfolio:not(.page-template) .share {
+  text-align: right; }
+  .post-template.tag-portfolio:not(.page-template) .share > span {
+    font-size: 0.7rem;
+    font-weight: 300;
+    line-height: 46px;
+    margin-right: 10px; }
+    @media (max-width: 640px) {
+      .post-template.tag-portfolio:not(.page-template) .share > span {
+        display: block;
+        line-height: 23px; } }
+  .post-template.tag-portfolio:not(.page-template) .share > a[class*='icon-'] {
+    margin-top: 7px; }
+    @media (max-width: 640px) {
+      .post-template.tag-portfolio:not(.page-template) .share > a[class*='icon-'] {
+        margin-top: 0; } }
+
 .contact-content {
   animation: op-in .999s ease-out forwards;
   min-height: calc(100vh - 150px);
@@ -955,9 +1065,6 @@ h6 {
       line-height: 1.11em;
       text-align: left;
       width: 66.66%; }
-
-.post-template:not(.page-template) .main-nav {
-  display: none; }
 
 .post-template:not(.page-template) .main-header {
   animation: blured-out .999s ease-out forwards;
